ajustando separacion entre botones

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ Tags: wordpress, html5, css3, jquery, javascript, suwwweb
 				-moz-background-size: cover;
 	text-align: center;
 	top: 0;
-	left: 0;
+	left: 0;eve
 }
 .font__page__logo img{
 	padding-top: 100px;
