--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ Tags: wordpress, html5, css3, jquery, javascript, suwwweb
 				-moz-background-size: cover;
 	text-align: center;
 	top: 0;
-	left: 0;eve
+	left: 0;
+	position: fixed;
+
 }
 .font__page__logo img{
 	padding-top: 100px;
@@ -496,9 +498,7 @@ a img.aligncenter {
 		.popup_inicio{
 			max-width: 100%;
 		}
-		.front__page{
-			height: 800px;
-		}
+
 		.content__admin{
 			padding-top: 0px;
 		}
